# fatstapi-trial

./: Dockerfile  pyproject.toml
app/: data.csv  myproject.py  requirements.txt
