[tool.poetry]
name = "fastapi dev"
version = "0.1.0"
description = "creating fastapi app"
authors = ["Alimam Haruna Seidu <harunaseidujnr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
